[gd_scene load_steps=29 format=3 uid="uid://di4riu174okwk"]

[ext_resource type="Script" path="res://Scripts/fila_caj.gd" id="1_nhtel"]
[ext_resource type="Script" path="res://Scripts/CameraScripts/camera_2d.gd" id="1_oon58"]
[ext_resource type="Texture2D" uid="uid://bpl8ly13or4jm" path="res://Assests/MAPAFILACAJ/_0000_chão.png" id="5_623ks"]
[ext_resource type="Texture2D" uid="uid://ba2hw7au3xg4b" path="res://Assests/MAPAFILACAJ/FundoAtras.png" id="6_mtn5d"]
[ext_resource type="Texture2D" uid="uid://b18ptaxj21182" path="res://Assests/MAPAFILACAJ/FundoFrente.png" id="7_yd0hu"]
[ext_resource type="Texture2D" uid="uid://yxu8bcsvn3dm" path="res://Assests/MAPAFILACAJ/_0003_pessoas2.png" id="8_p5kbu"]
[ext_resource type="Texture2D" uid="uid://cl37xx7tgjfbc" path="res://Assests/MAPAFILACAJ/_0002_pessoas.png" id="9_i0lld"]
[ext_resource type="Texture2D" uid="uid://cd2fgw4xqq5ho" path="res://Assests/MAPAFILACAJ/_0001_ponto-de-onibus.png" id="10_31ajt"]
[ext_resource type="Script" path="res://Scripts/HUD/Tempo.gd" id="11_edgwl"]
[ext_resource type="Texture2D" uid="uid://dkooywpymfl4q" path="res://Assests/hud/novahuf/HUDPreta.png" id="12_me6oa"]
[ext_resource type="Script" path="res://Scripts/HUD/Barras.gd" id="13_e555b"]
[ext_resource type="FontFile" uid="uid://0yoxe4ykxfco" path="res://Assests/Fontes/DeltaBlock-Regular.ttf" id="15_hvm2u"]
[ext_resource type="Texture2D" uid="uid://by0g820gl2qjr" path="res://Assests/hud/novahuf/vida vazia left.png" id="16_cryll"]
[ext_resource type="Texture2D" uid="uid://d4d1umvv60cht" path="res://Assests/hud/novahuf/efeito dano left.png" id="17_wk5v7"]
[ext_resource type="Texture2D" uid="uid://c5i1uypbpyobf" path="res://Assests/hud/novahuf/vida cheia left.png" id="18_33tok"]
[ext_resource type="Texture2D" uid="uid://b1pwpka8tut2y" path="res://Assests/hud/novahuf/vida vazia.png" id="19_hvawh"]
[ext_resource type="Texture2D" uid="uid://v16dl5gchjvm" path="res://Assests/hud/novahuf/efeito dano right.png" id="20_giwt0"]
[ext_resource type="Texture2D" uid="uid://duf5co7h33yux" path="res://Assests/hud/novahuf/vida Cheia.png" id="21_2ilo3"]
[ext_resource type="PackedScene" uid="uid://ckyh3xfiqt07t" path="res://Cenas/pauseMenu.tscn" id="21_bakc5"]
[ext_resource type="Script" path="res://Scripts/PlayerScripts/Player1Spawner.gd" id="22_lid6l"]
[ext_resource type="Texture2D" uid="uid://dsit3lip5ylig" path="res://Assests/hud/novahuf/poder vazio.png" id="22_uve6e"]
[ext_resource type="Texture2D" uid="uid://djrcj7teqjiom" path="res://Assests/FachadaAccets/fumaça.png" id="22_x8vqu"]
[ext_resource type="Texture2D" uid="uid://dplhss7bi5pqf" path="res://Assests/hud/novahuf/poder cheio.png" id="23_24h8a"]
[ext_resource type="Texture2D" uid="uid://bycv44yhknle8" path="res://Assests/menu main/subMenuSelecaoDePersonagem/selecaoDePersongemBtns/BtnsL/PedroBtn.png" id="24_k6clw"]
[ext_resource type="Texture2D" uid="uid://cmm54xk0ehm1d" path="res://Assests/menu main/subMenuSelecaoDePersonagem/selecaoDePersongemBtns/BtnsR/neemBtn.png" id="25_2kehu"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_geqs2"]
size = Vector2(247, 992)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_aipy4"]
size = Vector2(1727, 128)

[sub_resource type="Environment" id="Environment_3tbu2"]
background_mode = 3
background_energy_multiplier = 2.8
ambient_light_energy = 0.0
glow_enabled = true
glow_intensity = 0.53
glow_strength = 1.77
glow_blend_mode = 1
glow_hdr_threshold = 1.13
glow_hdr_scale = 4.0
glow_hdr_luminance_cap = 93.19
glow_map_strength = 0.71

[node name="fila_caj" type="Node2D"]
script = ExtResource("1_nhtel")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(1602, 440)
offset = Vector2(0, -91.89)
zoom = Vector2(1.085, 1.085)
limit_left = -630
limit_right = 1765
limit_bottom = 1100
script = ExtResource("1_oon58")
margin = Vector2(0, 0)

[node name="StaticBody2D3" type="StaticBody2D" parent="."]
position = Vector2(-222, 11)

[node name="StaticBody2D2" type="StaticBody2D" parent="."]
position = Vector2(-234, -77)

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StaticBody2D2"]
position = Vector2(1977.58, 537)
shape = SubResource("RectangleShape2D_geqs2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D2"]
position = Vector2(-395.305, 539.315)
shape = SubResource("RectangleShape2D_geqs2")

[node name="StaticBody2D" type="StaticBody2D" parent="."]
position = Vector2(115, 77)

[node name="Chão" type="Sprite2D" parent="StaticBody2D"]
position = Vector2(762.9, 307.515)
scale = Vector2(4.6, 2.91313)
texture = ExtResource("5_623ks")

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(763, 992)
scale = Vector2(-1.87, -1.87)
shape = SubResource("RectangleShape2D_aipy4")

[node name="Background" type="ParallaxBackground" parent="."]

[node name="05 FundoAtrás" type="ParallaxLayer" parent="Background"]
texture_repeat = 2
position = Vector2(-237, 101)
motion_scale = Vector2(0.29, 1)

[node name="Sprite2D" type="Sprite2D" parent="Background/05 FundoAtrás"]
position = Vector2(1206.79, 35.3968)
scale = Vector2(3.75994, 3.76997)
texture = ExtResource("6_mtn5d")

[node name="05 FundoFrente" type="ParallaxLayer" parent="Background"]
texture_repeat = 2
position = Vector2(-237, 101)
motion_scale = Vector2(0.34, 1)

[node name="Sprite2D" type="Sprite2D" parent="Background/05 FundoFrente"]
position = Vector2(1220.23, 330.107)
scale = Vector2(3.61364, 3.62328)
texture = ExtResource("7_yd0hu")

[node name="04 Pessoa 2" type="ParallaxLayer" parent="Background"]
texture_repeat = 2
position = Vector2(-188.26, 145.65)
motion_scale = Vector2(0.31, 1)

[node name="Fundo04" type="Sprite2D" parent="Background/04 Pessoa 2"]
position = Vector2(1602.36, 485.74)
scale = Vector2(2.05, 2.05)
texture = ExtResource("8_p5kbu")

[node name="03 Pessoas 1" type="ParallaxLayer" parent="Background"]
texture_repeat = 2
position = Vector2(-237, 101)
motion_scale = Vector2(0.32, 1)

[node name="Fundo03" type="Sprite2D" parent="Background/03 Pessoas 1"]
position = Vector2(1530.52, 515.04)
scale = Vector2(2.352, 2.352)
texture = ExtResource("9_i0lld")

[node name="02 Ponto" type="ParallaxLayer" parent="Background"]
texture_repeat = 2
position = Vector2(157.33, 771)
scale = Vector2(1.745, 1.745)
motion_scale = Vector2(0.6, 1)

[node name="Fundo02" type="Sprite2D" parent="Background/02 Ponto"]
position = Vector2(435.79, -70.163)
scale = Vector2(2.5, 2.415)
texture = ExtResource("10_31ajt")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_3tbu2")

[node name="Control" parent="." instance=ExtResource("21_bakc5")]

[node name="Parallax2D" type="Parallax2D" parent="."]
repeat_size = Vector2(5983.65, 0)
autoscroll = Vector2(300, 0)
ignore_camera_scroll = true

[node name="TextureRect" type="TextureRect" parent="Parallax2D"]
z_index = 4
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -2568.0
offset_top = 38.0
offset_right = 4211.0
offset_bottom = 1959.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
texture = ExtResource("22_x8vqu")

[node name="Players" type="Node2D" parent="."]
script = ExtResource("22_lid6l")

[node name="MarkPlayer1" type="Marker2D" parent="Players"]
position = Vector2(-132, 475)

[node name="MarkPlayer2" type="Marker2D" parent="Players"]
position = Vector2(1375, 480)

[node name="HUD" type="CanvasLayer" parent="."]

[node name="TextureRect" type="TextureRect" parent="HUD"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -680.0
offset_top = 29.0
offset_right = 660.0
offset_bottom = 100.0
grow_horizontal = 2
scale = Vector2(1.02, 1.02)
size_flags_horizontal = 4
texture = ExtResource("12_me6oa")

[node name="Tempo" type="Control" parent="HUD"]
layout_mode = 3
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -17.0
offset_top = 46.16
offset_right = 23.0
offset_bottom = 65.16
grow_horizontal = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("11_edgwl")

[node name="clocktimer" type="Timer" parent="HUD/Tempo"]
autostart = true

[node name="MarginContainer" type="MarginContainer" parent="HUD/Tempo"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.56
anchor_bottom = 1.0
offset_left = -27.6
offset_top = -33.66
offset_right = 30.0
offset_bottom = 25.84
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 8

[node name="Tempo_container" type="HBoxContainer" parent="HUD/Tempo/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="Tempo_label" type="Label" parent="HUD/Tempo/MarginContainer/Tempo_container"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("15_hvm2u")
theme_override_font_sizes/font_size = 70
text = "90
"

[node name="Barras" type="Control" parent="HUD"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("13_e555b")

[node name="timerbarra" type="Timer" parent="HUD/Barras"]

[node name="EF_BarraVidaPlayer1" type="TextureProgressBar" parent="HUD/Barras"]
layout_mode = 0
offset_left = 355.0
offset_top = 66.0
offset_right = 890.0
offset_bottom = 91.0
scale = Vector2(1.045, 1.045)
value = 100.0
texture_under = ExtResource("16_cryll")
texture_progress = ExtResource("17_wk5v7")

[node name="BarraVidaPlayer1" type="TextureProgressBar" parent="HUD/Barras"]
layout_mode = 0
offset_left = 355.0
offset_top = 66.0
offset_right = 891.0
offset_bottom = 91.0
scale = Vector2(1.045, 1.045)
value = 100.0
texture_progress = ExtResource("18_33tok")

[node name="EF_BarraVidaPlayer2" type="TextureProgressBar" parent="HUD/Barras"]
layout_mode = 0
offset_left = 1012.0
offset_top = 66.0
offset_right = 1548.0
offset_bottom = 91.0
scale = Vector2(1.045, 1.045)
value = 100.0
fill_mode = 1
texture_under = ExtResource("19_hvawh")
texture_progress = ExtResource("20_giwt0")

[node name="BarraVidaPlayer2" type="TextureProgressBar" parent="HUD/Barras"]
layout_mode = 0
offset_left = 1011.0
offset_top = 66.0
offset_right = 1547.0
offset_bottom = 91.0
scale = Vector2(1.045, 1.045)
value = 100.0
fill_mode = 1
texture_progress = ExtResource("21_2ilo3")

[node name="Power_Player1" type="TextureProgressBar" parent="HUD/Barras"]
layout_mode = 0
offset_left = 280.0
offset_top = 109.0
offset_right = 861.0
offset_bottom = 119.0
scale = Vector2(1.05, 1.05)
max_value = 60.0
texture_under = ExtResource("22_uve6e")
texture_progress = ExtResource("23_24h8a")

[node name="Power_Player2" type="TextureProgressBar" parent="HUD/Barras"]
layout_mode = 0
offset_left = 1039.0
offset_top = 109.0
offset_right = 1620.0
offset_bottom = 119.0
scale = Vector2(1.045, 1.045)
max_value = 60.0
fill_mode = 1
texture_under = ExtResource("22_uve6e")
texture_progress = ExtResource("23_24h8a")

[node name="InfosPlayer" type="Control" parent="HUD"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="NomePlayer2" type="Label" parent="HUD/InfosPlayer"]
layout_mode = 0
offset_left = 1476.0
offset_top = 40.0
offset_right = 1535.0
offset_bottom = 79.0
scale = Vector2(2.43823, 1.89691)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0.992157, 0, 0, 1)
theme_override_fonts/font = ExtResource("15_hvm2u")
theme_override_font_sizes/font_size = 10
text = "Neemias

"

[node name="NomePlayer1" type="Label" parent="HUD/InfosPlayer"]
layout_mode = 0
offset_left = 368.0
offset_top = 40.0
offset_right = 427.0
offset_bottom = 79.0
scale = Vector2(2.43823, 1.89691)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0.992157, 0, 0, 1)
theme_override_fonts/font = ExtResource("15_hvm2u")
theme_override_font_sizes/font_size = 10
text = "Michel
"

[node name="FotoPlayer1" type="TextureRect" parent="HUD/InfosPlayer"]
layout_mode = 0
offset_left = 279.0
offset_top = 26.0
offset_right = 374.0
offset_bottom = 121.0
scale = Vector2(0.8, 0.8)
texture = ExtResource("24_k6clw")

[node name="FotoPlayer2" type="TextureRect" parent="HUD/InfosPlayer"]
layout_mode = 0
offset_left = 1571.0
offset_top = 26.0
offset_right = 1666.0
offset_bottom = 121.0
scale = Vector2(0.8, 0.8)
texture = ExtResource("25_2kehu")

[connection signal="timeout" from="HUD/Tempo/clocktimer" to="HUD/Tempo" method="_on_clocktimer_timeout"]
